Setup the environment

--- a/assignments/pyproject.toml
+++ b/assignments/pyproject.toml
@@ -1,10 +1,21 @@
 [project]
+name = "life_expectancy"
+version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.8"
 description = "First assignment of the Foundations Learning Path"
 authors = [
-    {name = "Fernando Cordeiro<fernando@daredata.engineering>"}
+    {name = "Fernando Cordeiro<fernando@daredata.engineering>"},
+    {name = "Andreia Martins<andreia.martins@nos.pt>"}
 ]
+dependencies = ["pandas"]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["life_expectancy"]
 
 [project.optional-dependencies]
 dev = ["pytest", "pylint", "pytest-cov", "toml"]
